# diconline

./: .env  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
schema/: drop-db.sql  init-data.sql  init-db.sql
src/: main.py
src/modules/application/: manager.py  router.py
src/modules/assignment/: manager.py  router.py
src/modules/auth/: manager.py  router.py  schemas.py
src/modules/batch/: manager.py  router.py
src/modules/course/: manager.py  router.py
src/modules/dashboard/: manager.py  router.py
src/modules/department/: manager.py  router.py
src/modules/program/: manager.py  router.py
src/modules/staff/: manager.py  router.py
src/modules/student/: manager.py  router.py
src/shared/: auth.py  database.py  dependency.py  email.py  error_handler.py  file_handler.py  manager.py
